docs: repo-wide comment + documentation overhaul (cut AI-slop, no version narrative)
Strip build-process residue (Gate-N, Group A-F, RR-/WH-/DL-, C1-C4, register-section,
PR#, iter-N) and v1/v2 product-version narrative from comments across 626 changed Java
files -- proven comments-only, code byte-identical -- and from every doc. Keep genuine
invariants and reader-facing spec citations in plain prose.

Rewrite the README and known-limitations.md (513->287) as a present-tense human front
door; fold the v2-backlog into known-limitations; prune 71 files of build-process trail
(wire-hardening gate-2..7 + group-b/c investigation docs, session-rr-register, superseded
docs/operations/runbooks, plus root PROMPT.md, CHANGELOG.md, verification/, verification-runs/);
rebuild the docs map and reconcile all links. De-slop the measurement evidence with every
number and SHA preserved.

Comments and docs only, zero code behavior change. Full-reactor build green (48,260 tests,
0 failures).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>